--- a/cli/package.json
+++ b/cli/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
@@ -36,7 +37,7 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-mixed-spaces-and-tabs":"off"
+      "no-mixed-spaces-and-tabs": "off"
     }
   },
   "browserslist": [
